v3.1.0/_sources/plugins/license_usage_details_info_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.dnac.license_usage_details_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.license_usage_details_info -- Information module for License Usage Details
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.1.0).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.license_usage_details_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get License Usage Details by name.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-device_type"></div>
                    <b>device_type</b>
                    <a class="ansibleOptionLink" href="#parameter-device_type" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Device_type query parameter. Type of device like router, switch, wireless or ise.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-smart_account_id"></div>
                    <b>smart_account_id</b>
                    <a class="ansibleOptionLink" href="#parameter-smart_account_id" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Smart_account_id path parameter. Id of smart account.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-virtual_account_name"></div>
                    <b>virtual_account_name</b>
                    <a class="ansibleOptionLink" href="#parameter-virtual_account_name" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Virtual_account_name path parameter. Name of virtual account. Putting &quot;All&quot; will give license usage detail for all virtual accounts.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Notes


.. Seealso

See Also
--------

.. seealso::

   `License Usage Details reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the License Usage Details object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get License Usage Details by name
      cisco.dnac.license_usage_details_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        device_type: string
        smart_account_id: string
        virtual_account_name: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;purchased_dna_license&quot;: {
        &quot;total_license_count&quot;: 0,
        &quot;license_count_by_type&quot;: [
          {
            &quot;license_type&quot;: &quot;string&quot;,
            &quot;license_count&quot;: 0
          }
        ]
      },
      &quot;purchased_network_license&quot;: {
        &quot;total_license_count&quot;: 0,
        &quot;license_count_by_type&quot;: [
          {
            &quot;license_type&quot;: &quot;string&quot;,
            &quot;license_count&quot;: 0
          }
        ]
      },
      &quot;used_dna_license&quot;: {
        &quot;total_license_count&quot;: 0,
        &quot;license_count_by_type&quot;: [
          {
            &quot;license_type&quot;: &quot;string&quot;,
            &quot;license_count&quot;: 0
          }
        ]
      },
      &quot;used_network_license&quot;: {
        &quot;total_license_count&quot;: 0,
        &quot;license_count_by_type&quot;: [
          {
            &quot;license_type&quot;: &quot;string&quot;,
            &quot;license_count&quot;: 0
          }
        ]
      }
    }</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

